# HexStrategyGame

./: .gitignore  ARCHITECTURE.md  BATTLE_WORKFLOW.txt  CHANGELOG.md  CMakeLists.txt  COMPLETION_STATUS.md  DORM_NETWORK.md  EASY_SETUP.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_SFML.txt  SETUP_COMPLETE.md  SFML_BATTLE_CONTROLS.md  SFML_CLIENT_README.md  SFML_INTEGRATION.md  SFML_PROTOTYPE_SUMMARY.txt  SFML_SETUP.md  SFML_WEB_BUILD.md  TESTING.md  WINDOWS_BUILD.md  build.sh  build_sfml.sh  build_sfml_test.sh  build_windows.bat  build_windows_package.sh  setup_sfml.sh  sfml_main.cpp  start_simple.sh  start_web_server.sh  start_with_ngrok.sh  test_game.sh  test_sfml  test_sfml.cpp  test_web_client.sh
.github/workflows/: build.yml
client/include/: GameClient.h  HexRenderer.h  InputHandler.h  MenuSystem.h  SFMLGameClient.h  TextRenderer.h
client/src/: GameClient.cpp  HexRenderer.cpp  InputHandler.cpp  MenuSystem.cpp  SFMLGameClient.cpp  TextRenderer.cpp  WinMain.cpp  gui_launcher.cpp  main.cpp  win_launcher.cpp
common/include/: Action.h  Character.h  GameState.h  HexCoord.h  Protocol.h  Skill.h
common/src/: Action.cpp  Character.cpp  GameState.cpp  HexCoord.cpp  Protocol.cpp  Skill.cpp
server/include/: GameServer.h  GameSession.h  MatchManager.h  TurnResolver.h
server/src/: GameServer.cpp  GameSession.cpp  MatchManager.cpp  TurnResolver.cpp  main.cpp
web_client/: README.md  bridge.js  game.js  index.html  package-lock.json  package.json  server.js  style.css
